aws s3 스토리지 사용으로 인한 video src 경로수정

--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,6 +1,6 @@
 mixin videoBlock(video = {} ) 
   .videoBlock
-    video(src=`/${video.videoFile}`,controls=true,type='video/*').videoBlock__thumbnail
+    video(src=video.videoFile,controls=true,type='video/*').videoBlock__thumbnail
     a(href=routes.videoDetail(video.id))
       h4.videoBlock__title=video.title
       if video.views === 1
