img src 문제로 src 경로 삭제후 테스트

--- a/src/views/videoDetail.pug
+++ b/src/views/videoDetail.pug
@@ -31,7 +31,7 @@ block content
           .info
             span
         else
-          img.u-avatar(src="https://mutube.s3.ap-northeast-2.amazonaws.com/avatar/default.png")
+          img.u-avatar
       .video__comments-enter
         form.add__comment#jsAddComment
           //- 로그인 아닐시에는 join화면으로 이동
