messageFlash sass 수정 및 main.pug에 flash 타입 추가

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -16,27 +16,22 @@ html(lang="ko")
         type:'info',
         text:messages.info
       })
-    
     else if messages.error
       +message({
         type:'error',
         text:messages.error
       })
-    else if messages.joinsuccess
+    else if messages.successJoinId
       +message({
-        type:'joinsuccess',
-        text:messages.joinsuccess
+        type:'error',
+        text:messages.successJoinId
       })
     else if messages.success
       +message({
         type:'success',
         text:messages.success
       })
-    else if messages.joinIdError
-      +message({
-        type:'success',
-        text:messages.joinIdError
-      })
+
     
     //- header
     include ../partials/header.pug
